--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Percobaan</title>
+    <title>Home</title>
   </head>
   <body>
-    <h1>Rizqi Zulqornain</h1>
+    <h1>Ini Home</h1>
   </body>
 </html>
